Lagt til basert på behandlinger i vedtak DTOer .
