# mediator/src/main/kotlin/no/nav/dagpenger/behandling/mediator/api/BehandlingApi.kt
@@ -146,7 +146,7 @@ internal fun Application.behandlingApi(
                             HttpStatusCode.OK,
                             lagVedtak(
                                 behandling.behandlingId,
-                                behandling.forrigeBehandlingId(),
+                                behandling.basertPåBehandlinger(),
                                 Ident(behandling.behandler.ident),
                                 behandling.behandler.eksternId,
                                 behandling.opplysninger(),
